@@ -28,6 +28,7 @@ kvirc (4:4.0.0~svn3193-1) UNRELEASED; urgency=low
   * Fix "kvirc has circular Depends on kvirc-data". Now kvirc-data suggests 
     kvirc (Closes: #525037)
   * Adding license file Debian path on copyright file.
+  * Removing upstream license. Already provided by package.
 
  -- Raúl Sánchez Siles <rasasi78@gmail.com>  Wed, 25 Mar 2009 01:39:37 +0100
 
